# medical-terms-flashcards

./: CLAUDE.md  pyproject.toml
flashcards/: __init__.py  __main__.py  app.py  base.py  controller.py  history.py  main.py  medical-terms.md  test_app.py  utils.py
flashcards/screens/: __init__.py  flashcard.py  main_menu.py  quiz.py  quiz_results.py  scoreboard.py
